// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Diagnostic Settings Example renders the Azure Diagnostic Settings example and checks snapshot 1`] = `
"{
  "data": {
    "azurerm_monitor_diagnostic_categories": {
      "testdiagsettings_diagcategories_98583667": {
        "resource_id": "\${azurerm_eventhub_namespace.testEventHubNamespace.id}"
      }
    }
  },
  "output": {
    "diag_settings_name": {
      "value": "diag-settings-test"
    },
    "event_hub_namespace_id": {
      "value": "\${azurerm_eventhub_namespace.testEventHubNamespace.id}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_eventhub": {
      "testEventHub": {
        "message_retention": 1,
        "name": "eventhub-test",
        "namespace_name": "\${azurerm_eventhub_namespace.testEventHubNamespace.name}",
        "partition_count": 2,
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      }
    },
    "azurerm_eventhub_namespace": {
      "testEventHubNamespace": {
        "capacity": 1,
        "location": "eastus",
        "name": "eventhub-test-namespace",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "sku": "Basic"
      }
    },
    "azurerm_eventhub_namespace_authorization_rule": {
      "testEventHubAuth": {
        "listen": true,
        "manage": true,
        "name": "eventhub-auth-test",
        "namespace_name": "\${azurerm_eventhub.testEventHub.namespace_name}",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "send": true
      }
    },
    "azurerm_log_analytics_workspace": {
      "log_analytics": {
        "location": "eastus",
        "name": "la-test",
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      }
    },
    "azurerm_monitor_diagnostic_setting": {
      "testdiagsettings_2256DEF2": {
        "dynamic": {
          "enabled_log": {
            "content": {
              "category": "\${enabled_log.value}",
              "retention_policy": {
                "enabled": false
              }
            },
            "for_each": "\${tolist(data.azurerm_monitor_diagnostic_categories.testdiagsettings_diagcategories_98583667.logs)}"
          },
          "metric": {
            "content": {
              "category": "\${metric.value}",
              "retention_policy": {
                "enabled": false
              }
            },
            "for_each": "\${tolist(data.azurerm_monitor_diagnostic_categories.testdiagsettings_diagcategories_98583667.metrics)}"
          }
        },
        "eventhub_authorization_rule_id": "\${azurerm_eventhub_namespace_authorization_rule.testEventHubAuth.id}",
        "eventhub_name": "\${azurerm_eventhub.testEventHub.name}",
        "log_analytics_destination_type": "AzureDiagnostics",
        "log_analytics_workspace_id": "\${azurerm_log_analytics_workspace.log_analytics.id}",
        "name": "diag-settings-test",
        "target_resource_id": "\${azurerm_eventhub_namespace.testEventHubNamespace.id}"
      }
    },
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-test"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;

exports[`Azure Diagnostics With Defaults and no categories renders an Azure Diagnostic Settings with defaults and checks snapshot 1`] = `
"{
  "data": {
    "azurerm_monitor_diagnostic_categories": {
      "testAzureDiagnosticSettingsDefaultsNoCat_diagcategories_29732E12": {
        "resource_id": "\${azurerm_app_configuration.testAzureAppConfigurationNoCat.id}"
      }
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_app_configuration": {
      "testAzureAppConfigurationNoCat": {
        "location": "eastus",
        "name": "myappconfigstore",
        "resource_group_name": "myResourceGroup",
        "sku": "standard"
      }
    },
    "azurerm_monitor_diagnostic_setting": {
      "testAzureDiagnosticSettingsDefaultsNoCat_diagsettings_7B21F237": {
        "dynamic": {
          "enabled_log": {
            "content": {
              "category": "\${enabled_log.value}",
              "retention_policy": {
                "enabled": false
              }
            },
            "for_each": "\${tolist(data.azurerm_monitor_diagnostic_categories.testAzureDiagnosticSettingsDefaultsNoCat_diagcategories_29732E12.logs)}"
          },
          "metric": {
            "content": {
              "category": "\${metric.value}",
              "retention_policy": {
                "enabled": false
              }
            },
            "for_each": "\${tolist(data.azurerm_monitor_diagnostic_categories.testAzureDiagnosticSettingsDefaultsNoCat_diagcategories_29732E12.metrics)}"
          }
        },
        "log_analytics_destination_type": "AzureDiagnostics",
        "name": "diag-settings-test",
        "storage_account_id": "/subscriptions/12345678-1234-1234-1234-123456789012/resourceGroups/myResourceGroup/providers/Microsoft.Storage/storageAccounts/mystorageaccount",
        "target_resource_id": "\${azurerm_app_configuration.testAzureAppConfigurationNoCat.id}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;

exports[`Azure Diagnostics With Defaults renders an Azure Diagnostic Settings with defaults and checks snapshot 1`] = `
"{
  "data": {
    "azurerm_monitor_diagnostic_categories": {
      "testAzureDiagnosticSettingsDefaults_diagcategories_F2065BB8": {
        "resource_id": "\${azurerm_app_configuration.testAzureApplicationConfiguration.id}"
      }
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_app_configuration": {
      "testAzureApplicationConfiguration": {
        "location": "eastus",
        "name": "myappconfigstore",
        "resource_group_name": "myResourceGroup",
        "sku": "standard"
      }
    },
    "azurerm_monitor_diagnostic_setting": {
      "testAzureDiagnosticSettingsDefaults_diagsettings_A338353D": {
        "dynamic": {
          "enabled_log": {
            "content": {
              "category": "\${enabled_log.value}",
              "retention_policy": {
                "enabled": false
              }
            },
            "for_each": [
              "AuditEvent",
              "Policy"
            ]
          },
          "metric": {
            "content": {
              "category": "\${metric.value}",
              "retention_policy": {
                "enabled": false
              }
            },
            "for_each": [
              "AllMetrics"
            ]
          }
        },
        "log_analytics_destination_type": "AzureDiagnostics",
        "name": "diag-settings-test",
        "storage_account_id": "/subscriptions/12345678-1234-1234-1234-123456789012/resourceGroups/myResourceGroup/providers/Microsoft.Storage/storageAccounts/mystorageaccount",
        "target_resource_id": "\${azurerm_app_configuration.testAzureApplicationConfiguration.id}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;
